"Edición remota del archivo index.html"

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Bienvenidos a mi Proyecto Web</h1>
     <p>Este es un proyecto de ejemplo para aprender Git y GitHub.</p>
     <p>Aquí se realizarán cambios y pruebas con el control de versiones.</p>
+    <p>Aquí editamos el html</p>
 </body>
 </html>
